tests/suite/snapshots/suite__check__tests__check__bad-class-shadowing2.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-class-shadowing2.xi:3:5]
   │
 3 │     a: int
   ·     ───┬──  
   ·        ╰──── Name already bound in environment
───╯

